GMM_Main/src/objects/State_Commission_Planning__c.object
<CustomObject>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StateCommission__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>State Commission</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>State Commission</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>State Commission Allocations</relationshipLabel>
        <relationshipName>State_Commission_Plannings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Allocation__c</fullName>
        <label>Total Allocation</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>State Commission Allocations</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StateCommission__c</columns>
        <columns>Total_Allocation__c</columns>
        <columns>Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SCP-{0000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Commission Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>